--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -29,16 +29,20 @@ header {
     display: flex;
 }
 
+span{
+    color: white;
+}
+
 .sidebar {
     width: 250px;
-    background-color: #444;
+    background-color: darkblue;
     color: #fff;
     padding: 20px;
     position: fixed;
     top: 0;
     left: -250px;
     height: 100%;
-    overflow-y: auto; /* Make the sidebar scrollable */
+    overflow-y: auto; 
     transition: left 0.3s ease-in-out;
 }
 
@@ -53,6 +57,10 @@ header {
 
 .sidebar ul li {
     margin-bottom: 40px;
+}
+
+.sidebar a:hover {
+    color: darkorange; 
 }
 
 
