--- a/css/styles.css
+++ b/css/styles.css
@@ -5,20 +5,82 @@ body {
     padding: 0;
 }
 
-/* Header styles */
+
 header {
-    position: relative;
-    height: 400px; 
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: white;
+    color: #333; 
+    padding: 10px;
+    border-bottom: 2px solid gray;
+    width: 100%;
+    z-index: 1000; 
+    transition: background-color 0.3s; 
+}
+
+header.shadow {
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logo {
+    font-size: 24px;
+}
+
+.menu-toggle {
+    display: none;
+    flex-direction: column;
+    cursor: pointer;
+}
+
+.bar {
+    width: 25px;
+    height: 3px;
+    background-color: black;
+    margin: 3px 0;
+}
+
+.menu {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+}
+
+.menu li {
+    margin-right: 20px;
+}
+
+.menu li:last-child {
+    margin-right: 0;
+}
+
+.menu a {
+    color: black;
+    text-decoration: none;
+}
+
+/* Hero Container styles */
+
+.hero {
+    /* position: relative; */
+    height: 80vh; 
     overflow: hidden;
 }
 
-header img {
+.hero img {
     width: 100%;
     height: auto;
     object-fit: cover;
 }
 
-header p {
+.hero p {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -42,17 +104,10 @@ header p {
     }
 }
 
-/* Media Query for Mobile Devices */
-@media (max-width: 768px) {
-    header p {
-        font-size: 24px; 
-    }
-}
 
 
 section{
-    padding-right: 3rem;
-    padding-left: 3rem;
+    padding: 2rem;
     margin: 20px
 }
 
@@ -66,9 +121,11 @@ input[type="password"] {
     border: 1px solid #ccc;
     border-radius: 3px;
 }
+
+
 /* Filter Gallery Styles */
 .filter-gallery {
-    padding: 20px;
+    padding: 10px;
 }
 
 .access {
@@ -89,7 +146,7 @@ input[type="password"] {
 }
 
 .search-form button {
-    padding: 8px 15px;
+    padding: 6px 12px;
     border: none;
     background-color: #007bff;
     color: #fff;
@@ -145,29 +202,13 @@ input[type="password"] {
     cursor: pointer;
 }
 
-/* Mobile Responsive */
-@media only screen and (max-width: 600px) {
-    .access {
-        flex-direction: column;
-        align-items: stretch;
-    }
 
-    .search-form input[type="search"] {
-        width: 100%;
-    }
-
-    #login-btn,
-    #add-to-gallery {
-        margin-left: 0;
-        margin-top: 10px;
-    }
-}
 
 
 
 h2 {
     text-align: center;
-    margin-bottom: 20px;
+    
 }
 /**** Styling the auth system */
 .container {
@@ -317,13 +358,7 @@ button:hover {
     color: white;
 }
 
-/* Media query for responsiveness */
-@media only screen and (min-width: 768px) {
-    .gallery img {
-        width: calc(20% - 16px); 
-        max-width: none; 
-    }
-}
+
 
 
 /* Categories styling */
@@ -334,8 +369,8 @@ ul {
 
 /* Style every even list item */
 li:nth-child(even) {
-    background-color: gray; 
-    color:  white;
+    background-color: rgb(255, 255, 255); 
+    color:  white !important;
 }
 
 /* Style every odd list item */
@@ -355,4 +390,100 @@ li {
 li:hover {
     transform: translateY(-2px);
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+
+/* Media query for responsiveness */
+
+@media only screen and (min-width: 768px) {
+    .filter-gallery {
+        margin-top: 0 !important; 
+    }
+
+    .gallery img {
+        width: calc(20% - 16px); 
+        max-width: 100%; 
+    }
+
+}
+
+
+@media (max-width: 768px) {
+    .hero{
+        height: auto
+    }
+
+
+    .filter-gallery {
+        margin-top: 0 !important; 
+    }
+
+    .hero p {
+        font-size: 26px; 
+    }
+
+    .category-select{
+        width: 100%;
+    }
+}
+
+
+
+
+@media only screen and (max-width: 768px) {
+    .menu {
+        display: none;
+        flex-direction: column;
+        background-color: #333;
+        position: absolute;
+        top: 50px;
+        left: 0;
+        width: 100%;
+        padding: 10px 0;
+        color: white;
+    }
+
+    .menu-toggle {
+        display: flex;
+    }
+
+    .menu-toggle.active .bar:first-child {
+        transform: rotate(45deg) translate(5px, 5px);
+    }
+
+    .menu-toggle.active .bar:nth-child(2) {
+        opacity: 0;
+    }
+
+    .menu-toggle.active .bar:last-child {
+        transform: rotate(-45deg) translate(5px, -5px);
+    }
+
+    .menu-toggle.active + .menu {
+        display: flex;
+    }
+
+    .menu li {
+        margin-right: 0;
+        text-align: center;
+        color: white;
+    }
+
+    .menu li a{
+        color: white !important;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    
+
+    .search-form input[type="search"] {
+        width: 100%;
+    }
+
+    #login-btn,
+    #add-to-gallery {
+        margin-left: 0;
+       
+    }
 }
